--- a/jekyll/app/_includes/footer.html
+++ b/jekyll/app/_includes/footer.html
@@ -7,13 +7,13 @@
     </ul>
   </nav>
 
-  <div class="login-area">
+  <div class="adding-area">
     <nav>
       <ul>
         <li class="first"><a href="#">Add a book</a></li>
         <li><a href="#">Add a book series</a></li>
         <li class="last"><a href="#">Add a person</a></li>
-        <!--<li class="last login"><a href="#">LOGIN</a></li>-->
+        <li class="last login"><a href="#">LOGIN</a></li>
       </ul>
     </nav>
   </div>
