--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -273,7 +273,7 @@ a, a:hover, a:visited {
       }
     }
 
-    .login-area {
+    .adding-area {
       display: inline-block;
       margin-right: 1px;
       margin-top: 20px;
@@ -282,6 +282,7 @@ a, a:hover, a:visited {
         padding-top: 6px;
         letter-spacing: -0.7px;
         display: inline-block;
+        margin-left: -8px;
 
         &:before,
         &:after {
@@ -333,8 +334,9 @@ a, a:hover, a:visited {
       }
 
       li.login {
-        padding: 1px 15px 0px 0px;
+        padding: 1px 15px 0px 15px;
         text-transform: uppercase;
+        display: none;
 
         a {
           font: 14px bell_mtbold;
