Fix minor css in the footer.

--- a/jekyll/app/_includes/footer.html
+++ b/jekyll/app/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <nav class="icons-nav nav-bar">
+  <nav class="icons-nav nav-bar footer-nav-bar">
     <ul class="menu nav"><li class="first leaf active"><a href="" title="" class="active">BOOKS</a></li>
       <li class="leaf active"><a href="" title="" class="active">DIGITAL BOOKS</a></li>
       <li class="leaf active"><a href="" title="" class="active">PEOPLE</a></li>
