--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -179,6 +179,10 @@ a, a:hover, a:visited {
     overflow: hidden;
     clear: both;
 
+    .footer-nav-bar {
+      padding-bottom: 35px;
+    }
+
     .icons-nav {
       font-family: bell_mtbold;
       border-bottom: 1px solid #817f7a;
