--- a/jekyll/app/_includes/footer.html
+++ b/jekyll/app/_includes/footer.html
@@ -7,12 +7,14 @@
     </ul>
   </nav>
 
-  <nav class="bottom-nav">
-    <ul class="bottom-nav-options">
-      <li class="first"><a href="#">Add a book</a></li>
-      <li><a href="#">Add a book series</a></li>
-      <li class="last"><a href="#">Add a person</a></li>
-      <li class="first last login"><a href="#">LOGIN</a></li>
-    </ul>
-  </nav>
+  <div class="login-area">
+    <nav>
+      <ul>
+        <li class="first"><a href="#">Add a book</a></li>
+        <li><a href="#">Add a book series</a></li>
+        <li class="last"><a href="#">Add a person</a></li>
+        <!--<li class="last login"><a href="#">LOGIN</a></li>-->
+      </ul>
+    </nav>
+  </div>
 </footer>
