--- a/jekyll/app/_scss/_book.scss
+++ b/jekyll/app/_scss/_book.scss
@@ -196,6 +196,10 @@
 
             .field-item {
               display: inline;
+
+              &:not(:first-child):before {
+                content:', ';
+              }
             }
           }
         }
