--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -105,6 +105,9 @@ a, a:hover, a:visited {
       }
     }
 
+    .top-menu {
+      margin-bottom: 23px;
+    }
     .site-name {
       font-family: bell_mtbold;
       font-size: 64px;
