Fix the footer texts.

--- a/jekyll/app/_includes/footer.html
+++ b/jekyll/app/_includes/footer.html
@@ -1,9 +1,9 @@
 <footer>
   <nav class="icons-nav nav-bar footer-nav-bar">
-    <ul class="menu nav"><li class="first leaf active"><a href="" title="" class="active">BOOKS</a></li>
-      <li class="leaf active"><a href="" title="" class="active">DIGITAL BOOKS</a></li>
-      <li class="leaf active"><a href="" title="" class="active">PEOPLE</a></li>
-      <li class="last leaf active"><a href="" title="" class="active">PLACES</a></li>
+    <ul class="menu nav"><li class="first leaf active"><a href="" title="" class="active">Books</a></li>
+      <li class="leaf active"><a href="" title="" class="active">Digital Books</a></li>
+      <li class="leaf active"><a href="" title="" class="active">People</a></li>
+      <li class="last leaf active"><a href="" title="" class="active">Places</a></li>
     </ul>
   </nav>
 
