--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -281,7 +281,7 @@ a, a:hover, a:visited {
       }
     }
 
-    .adding-area {
+    .bottom-nav {
       display: inline-block;
       margin-right: 1px;
       margin-top: 20px;
