--- a/jekyll/app/_scss/_book.scss
+++ b/jekyll/app/_scss/_book.scss
@@ -1,4 +1,4 @@
-.page-single-book {
+.node-type-book {
 
   .wrapper {
 
@@ -42,7 +42,7 @@
 
         padding: 0 21px 53px;
         border-bottom: 2px solid $darkgray;
-        margin-bottom: 29px;
+        margin-bottom: 31px;
 
         .title {
           font-size: 31px;
@@ -54,7 +54,7 @@
         }
 
         .field {
-          line-height: 2.31;
+          line-height: 2.42;
           letter-spacing: 0.4px;
         }
       }
@@ -66,6 +66,7 @@
 
         .field-label {
           display: inline-block;
+          font-weight: normal;
 
           &.type-label {
             font-size: 16px;
@@ -83,14 +84,14 @@
         font-family: bell_mtbold;
         letter-spacing: 0.54px;
         padding-bottom: 13px;
-        height: 26px;
+        position: relative;
 
         ul{
-          height: 25px;
-          width: 97%;
+          height: 13px;
+          width: 100%;
           overflow: hidden;
           text-overflow: ellipsis;
-          float: left;
+          display: inline;
 
           li {
             display: list-item;
@@ -104,7 +105,9 @@
               list-style-type: none;
             }
 
-             a:hover {
+            &.active a,
+            a:hover,
+             {
               color: $lightBlue;
             }
 
@@ -115,9 +118,11 @@
           }
         }
 
+
         &:before, &:after {
           background: url('../images/sprites.png') no-repeat center;
           margin-top: 4px;
+
         }
 
         &:before {
@@ -138,6 +143,10 @@
           width: 9px;
           height: 15px;
           float: right;
+          position: absolute;
+          top: 0;
+          right: 0;
+
         }
 
         &:after.disabled {
@@ -145,44 +154,48 @@
         }
       }
 
-      .fields-group {
-
+      .groups {
         clear: both;
-        border-top: 1px solid $darkgray;
-        padding: 6px 15px 2px;
-        margin-top: 56px;
+        padding-top: 17px;
 
-        .fields-group-name {
-          font: 24px bell_mtbold;
-          color: $lightBlue;
-          text-transform: uppercase;
-          letter-spacing: 0.7px;
-          width: 267px;
-          display: inline-block;
-          vertical-align: top;
+        .fields-group {
 
-        }
+          border-top: 1px solid $darkgray;
+          clear: both;
+          padding: 6px 15px 2px;
+          margin-top: 56px;
 
-        .fields-group-name-last {
-          margin-top: 5px;
-        }
+          .fields-group-name {
+            font: 24px bell_mtbold;
+            color: $lightBlue;
+            text-transform: uppercase;
+            letter-spacing: 0.7px;
+            width: 267px;
+            display: inline-block;
+            vertical-align: top;
+          }
 
-        .fields {
-          display: inline-block;
-          width: 60%;
-          margin-top: -3px;
-          margin-left: 2px;
-          font-size: 14px;
+          .fields {
+            display: inline-block;
+            width: 60%;
+            margin-top: -3px;
+            margin-left: 2px;
+            font-size: 14px;
 
-          .content {
-            font-weight: bold;
+            .field-item {
+              display: inline;
+
+              &:not(:first-child):before {
+                content:', ';
+              }
+            }
           }
         }
       }
     }
 
     footer {
-      margin-top: 22px;
+      margin-top: 23px;
     }
   }
 }
