--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -39,12 +39,19 @@ a, a:hover, a:visited {
   text-decoration: none;
 }
 
-/* reset bootstrap */
+/* Reset bootstrap */
 *, *:before, *:after {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
 }
+
+.page-header{
+  padding: 0;
+  margin: 0;
+  border-bottom: none;
+}
+/* End reset bootstrap */
 
 .wrapper {
   max-width: 950px;
@@ -277,28 +284,39 @@ a, a:hover, a:visited {
       }
     }
 
-    .bottom-nav {
+    .login-area {
       display: inline-block;
       margin-right: 1px;
-      margin-top: 0px;
+      margin-top: 20px;
 
-      ul.bottom-nav-options {
-        margin-top: 20px;
+      /*ul.bottom-nav-options {
 
         li {
           padding: 1px 10px 0px 0px;
         }
-      }
+      }*/
 
       ul {
         padding-top: 6px;
-        letter-spacing: -0.2px;
+        letter-spacing: -0.7px;
         display: inline-block;
+
+        &:before,
+        &:after {
+          margin-top: 9px;
+          padding: 0;
+          content: '+';
+          font-size: 12px;
+          font-weight: bold;
+          color: $lightBlue;
+          display: inline-block;
+        }
       }
 
       li {
-        float: left;
-        padding: 0px 22px 0px 0px;
+        /*float: left;
+        padding: 0px 22px 0px 0px;*/
+        padding: 0px 18px 0px 0px;
         display: inline-block;
 
         &:after {
@@ -315,66 +333,23 @@ a, a:hover, a:visited {
         }
 
         &.first {
-          padding-left: 23px;
+          padding-left: 22px;
         }
-      }
 
-      li.login.first {
-        display: none;
-        padding-left: 11px;
-      }
-
-      li.login {
-        display: none;
-        padding: 1px 15px 0px 0px;
-
-        a {
-          font: 14px bell_mtbold;
+        &.last {
+          padding-right: 18px;
         }
       }
 
       a {
         color: $lightBlue;
         font: 18px bell_mtbold;
-      }
-
-      &:before,
-      &:after {
-        margin-top: 9px;
         padding: 0;
-        content: '+';
-        font-size: 12px;
-        font-weight: bold;
-        color: $lightBlue;
+        display: inline-block;
       }
 
-      &:before {
-        float: left;
-      }
-
-      &:after {
-        float: right;
-      }
-    }
-
-    .login-area {
-      padding-top: 6px;
-      text-transform: uppercase;
-
-
-      a {
-        color: $lightBlue;
-        font: 15px bell_mtbold;
-        letter-spacing: -0.5px;
-        padding: 0;
-        display: inline;
-
-        &:before,
-        &:after {
-          padding: 0 13px;
-          content: '+';
-          font-size: 12px;
-        }
+      li.login.first {
+        padding-left: 11px;
       }
     }
   }
