--- a/jekyll/app/_scss/_book.scss
+++ b/jekyll/app/_scss/_book.scss
@@ -38,7 +38,7 @@
       margin-top: 30px;
       text-align: left;
 
-      .top-details {
+      #top-details {
 
         padding: 0 21px 53px;
         border-bottom: 2px solid $darkgray;
@@ -84,7 +84,7 @@
         }
       }
 
-      .details-navigation {
+      #details-navigation {
         font-family: bell_mtbold;
         letter-spacing: 0.54px;
         padding-bottom: 13px;
@@ -158,7 +158,7 @@
         }
       }
 
-      .groups {
+      #groups {
         clear: both;
         padding-top: 17px;
 
