--- a/jekyll/app/_includes/footer.html
+++ b/jekyll/app/_includes/footer.html
@@ -1,18 +1,20 @@
 <footer>
-  <nav class="icons-nav nav-bar">
-    <ul class="menu nav"><li class="first leaf active"><a href="" title="" class="active">BOOKS</a></li>
-      <li class="leaf active"><a href="" title="" class="active">DIGITAL BOOKS</a></li>
-      <li class="leaf active"><a href="" title="" class="active">PEOPLE</a></li>
-      <li class="last leaf active"><a href="" title="" class="active">PLACES</a></li>
+  <nav class="icons-nav nav-bar footer-nav-bar">
+    <ul class="menu nav"><li class="first leaf active"><a href="" title="" class="active">Books</a></li>
+      <li class="leaf active"><a href="" title="" class="active">Digital Books</a></li>
+      <li class="leaf active"><a href="" title="" class="active">People</a></li>
+      <li class="last leaf active"><a href="" title="" class="active">Places</a></li>
     </ul>
   </nav>
 
-  <nav class="bottom-nav">
-    <ul class="bottom-nav-options">
-      <li class="first"><a href="#">Add a book</a></li>
-      <li><a href="#">Add a book series</a></li>
-      <li class="last"><a href="#">Add a person</a></li>
-      <li class="first last login"><a href="#">LOGIN</a></li>
-    </ul>
-  </nav>
+  <div class="bottom-nav">
+    <nav>
+      <ul>
+        <li class="first"><a href="#">Add a book</a></li>
+        <li><a href="#">Add a book series</a></li>
+        <li class="last"><a href="#">Add a person</a></li>
+        <li class="last login"><a href="#">Login</a></li>
+      </ul>
+    </nav>
+  </div>
 </footer>
