--- a/jekyll/app/_includes/header.html
+++ b/jekyll/app/_includes/header.html
@@ -8,7 +8,8 @@
     </ul>
   </nav>
 
-  <h1 class="site-name"><a href="/"><span>Library of the</span> Haskala</a></h1>
+  <h1 class="site-name"><a href="/"><!--<span>Library of the</span> -->Haskala</a></h1>
+  <!--<h1 class="site-name"><a href="/"><span>Library of the</span> Haskala</a></h1>-->
   <hr>
 
   <nav class="bread-crumbs">
