--- a/jekyll/app/_includes/footer.html
+++ b/jekyll/app/_includes/footer.html
@@ -7,7 +7,7 @@
     </ul>
   </nav>
 
-  <div class="bottom-nav">
+  <div class="login-area">
     <nav>
       <ul>
         <li class="first"><a href="#">Add a book</a></li>
