bottom-nav => login-area

--- a/jekyll/app/_scss/_books.scss
+++ b/jekyll/app/_scss/_books.scss
@@ -132,7 +132,7 @@
     footer {
       margin-top: 118px;
 
-      .bottom-nav ul{
+      .login-area ul{
         padding-top: 25px;
       }
     }
