--- a/jekyll/app/_scss/_homepage.scss
+++ b/jekyll/app/_scss/_homepage.scss
@@ -80,7 +80,7 @@
       color: $lightBlue;
       font-family: bell_mtbold;
       font-weight: bold;
-      margin-right: 4px;
+      margin: 0px 4px 0px 0px;
       letter-spacing: 0.9px;
 
       &:before,
