--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -299,18 +299,17 @@ a, a:hover, a:visited {
       margin-top: 20px;
 
       ul {
-        padding-top: 6px;
+        padding-top: 5px;
         letter-spacing: -0.7px;
         display: inline-block;
-        margin-left: -8px;
 
         &:before, &:after {
-          margin-top: 9px;
           padding: 0;
           content: '+';
           font-size: 12px;
           font-weight: bold;
           color: $lightBlue;
+          display: inline-block;
         }
 
       }
@@ -333,7 +332,7 @@ a, a:hover, a:visited {
         }
 
         &.first {
-          padding-left: 22px;
+          padding-left: 18px;
         }
 
         &.last {
@@ -343,7 +342,7 @@ a, a:hover, a:visited {
 
       a {
         color: $lightBlue;
-        font: 18px bell_mtbold;
+        font: 14px bell_mtbold;
         padding: 0;
         display: inline;
       }
