--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -220,6 +220,10 @@ a, a:hover, a:visited {
           width: 100%;
         }
 
+        &.active a {
+          color: $lightBlue;
+        }
+        
         &.last {
           padding-right: 0;
           background: none;
@@ -253,7 +257,8 @@ a, a:hover, a:visited {
             width: 28px;
           }
 
-          &:hover:before {
+          &:hover:before,
+          &.active:before {
             background-position: 0 -50px;
           }
         }
@@ -264,7 +269,8 @@ a, a:hover, a:visited {
             width: 28px;
           }
 
-          &:hover:before {
+          &:hover:before,
+          &.active:before {
             background-position: -50px -50px;
           }
         }
@@ -275,7 +281,8 @@ a, a:hover, a:visited {
             width: 36px;
           }
 
-          &:hover:before {
+          &:hover:before,
+          &.active:before {
             background-position: -100px -50px;
           }
         }
@@ -286,7 +293,8 @@ a, a:hover, a:visited {
             width: 23px;
           }
 
-          &:hover:before {
+          &:hover:before,
+          &.active:before {
             background-position: -150px -50px;
           }
         }
@@ -352,12 +360,7 @@ a, a:hover, a:visited {
       }
 
       li.login {
-        padding: 1px 15px 0px 15px;
         text-transform: uppercase;
-
-        a {
-          font: 14px bell_mtbold;
-        }
       }
     }
   }
