--- a/jekyll/app/_scss/_book.scss
+++ b/jekyll/app/_scss/_book.scss
@@ -1,4 +1,4 @@
-.page-single-book {
+.node-type-book {
 
   .wrapper {
 
@@ -25,12 +25,13 @@
     }
 
     .hr-title {
-      margin: 13px 0 62px;
+      margin: 15px 0 62px;
       font-size: 24px;
       letter-spacing: 2px;
 
       &:before, &:after {
         width: 45%;
+        padding-top: 8px;
       }
     }
 
@@ -38,24 +39,28 @@
       margin-top: 30px;
       text-align: left;
 
-      .top-details {
+      #top-details {
 
-        padding: 0 21px 53px;
+        padding: 0 21px 51px;
         border-bottom: 2px solid $darkgray;
-        margin-bottom: 29px;
+        margin-bottom: 31px;
 
         .title {
           font-size: 31px;
           font-weight: normal;
           line-height: 1.07;
           text-transform: uppercase;
-          margin-bottom: 12px;
+          margin-bottom: 14px;
           letter-spacing: -0.5px;
         }
 
         .field {
-          line-height: 2.31;
+          line-height: 2.42;
           letter-spacing: 0.4px;
+
+          .field-items {
+            font-weight: normal;
+          }
         }
       }
 
@@ -66,6 +71,7 @@
 
         .field-label {
           display: inline-block;
+          font-weight: normal;
 
           &.type-label {
             font-size: 16px;
@@ -73,38 +79,40 @@
           }
         }
 
-        .content {
+        .field-items {
           display: inline-block;
           font-weight: bold;
         }
       }
 
-      .details-navigation {
+      #details-navigation {
         font-family: bell_mtbold;
         letter-spacing: 0.54px;
         padding-bottom: 13px;
-        height: 26px;
+        position: relative;
 
         ul{
-          height: 25px;
-          width: 97%;
+          height: 13px;
+          width: 100%;
           overflow: hidden;
           text-overflow: ellipsis;
-          float: left;
+          display: inline;
 
           li {
             display: list-item;
             list-style-type: disc;
-            margin: 0 13px;
+            margin: 0 12px;
             float: left;
             font-size: 14px;
 
-            &.first
+            &:first-child
             {
               list-style-type: none;
             }
 
-             a:hover {
+            &.active a,
+            a:hover,
+             {
               color: $lightBlue;
             }
 
@@ -114,6 +122,7 @@
             }
           }
         }
+
 
         &:before, &:after {
           background: url('../images/sprites.png') no-repeat center;
@@ -138,6 +147,10 @@
           width: 9px;
           height: 15px;
           float: right;
+          position: absolute;
+          top: 0;
+          right: 0;
+
         }
 
         &:after.disabled {
@@ -145,44 +158,47 @@
         }
       }
 
-      .fields-group {
-
+      #groups {
         clear: both;
-        border-top: 1px solid $darkgray;
-        padding: 6px 15px 2px;
-        margin-top: 56px;
+        padding-top: 15px;
 
-        .fields-group-name {
-          font: 24px bell_mtbold;
-          color: $lightBlue;
-          text-transform: uppercase;
-          letter-spacing: 0.7px;
-          width: 267px;
-          display: inline-block;
-          vertical-align: top;
+        .fields-group {
 
-        }
+          border-top: 1px solid $darkgray;
+          clear: both;
+          padding: 6px 18px 2px;
+          margin-top: 56px;
 
-        .fields-group-name-last {
-          margin-top: 5px;
-        }
+          .fields-group-name {
+            font: 24px bell_mtbold;
+            color: $lightBlue;
+            text-transform: uppercase;
+            letter-spacing: 0.7px;
+            width: 267px;
+            display: inline-block;
+            vertical-align: top;
+          }
 
-        .fields {
-          display: inline-block;
-          width: 60%;
-          margin-top: -3px;
-          margin-left: 2px;
-          font-size: 14px;
+          .fields {
+            display: inline-block;
+            width: 60%;
+            margin-top: -3px;
+            font-size: 14px;
 
-          .content {
-            font-weight: bold;
+            .field-item {
+              display: inline;
+
+              &:not(:first-child):before {
+                content:', ';
+              }
+            }
           }
         }
       }
     }
 
     footer {
-      margin-top: 22px;
+      margin-top: 23px;
     }
   }
 }
