--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -235,6 +235,7 @@ a, a:hover, a:visited {
           letter-spacing: -0.2px;
           padding: 0;
           margin-right: 2px;
+          text-transform: uppercase;
 
           &:before {
             content: '';
