--- a/jekyll/app/_scss/_book.scss
+++ b/jekyll/app/_scss/_book.scss
@@ -192,6 +192,10 @@
                 content:', ';
               }
             }
+
+            .fields-multi:not(:first-child) {
+              margin-top: 30px;
+            }
           }
         }
       }
