--- a/jekyll/app/_scss/_books.scss
+++ b/jekyll/app/_scss/_books.scss
@@ -44,8 +44,8 @@
 
         &.eng {
           li {
-            padding-right: 6px;
-            letter-spacing: 0.8px;
+            padding-right: 3px;
+            letter-spacing: -0.5px;
 
             &:after {
               padding-left: 8px;
@@ -118,6 +118,10 @@
         }
       }
 
+      .he {
+        font: 60px Alef;
+      }
+
       .books-by-letter {
         text-align: left;
         float: left;
@@ -126,6 +130,11 @@
         font-weight: bold;
         line-height: 2.41;
         letter-spacing: 1.2px;
+        max-width: 572px;
+
+        a {
+          color: $darkgray;
+        }
       }
     }
 
