Add mentionees for PERSONS MENTIONED IN BOOK tab.

--- a/jekyll/app/_scss/_book.scss
+++ b/jekyll/app/_scss/_book.scss
@@ -185,6 +185,11 @@
             margin-top: -3px;
             font-size: 14px;
 
+            .tab-sub-title {
+              margin-top: 40px;
+              border-bottom: 1px solid $darkgray;
+            }
+
             .field-item {
               display: inline;
 
