--- a/jekyll/app/_scss/_books.scss
+++ b/jekyll/app/_scss/_books.scss
@@ -22,7 +22,26 @@
 
       nav {
             margin-bottom: 10px;
-        
+
+        ul {
+          margin: 0;
+          padding: 0;
+          list-style-type: none;
+          text-align: justify;
+          line-height: 0;
+          font-size: 1px; /* 1px for Opera */
+
+          /* For IE6-7*/
+          text-justify: newspaper;
+          zoom:1;
+        }
+
+        ul:after {
+          content: '';
+          width: 100%;
+          display: inline-block;
+        }
+
         li a:hover {
           color: $lightBlue;
         }
@@ -44,8 +63,8 @@
 
         &.eng {
           li {
-            padding-right: 6px;
-            letter-spacing: 0.8px;
+            padding-right: 3px;
+            letter-spacing: -0.9px;
 
             &:after {
               padding-left: 8px;
@@ -68,7 +87,7 @@
           li {
             font: 26px Alef;
             padding-left: 6px;
-            letter-spacing: 1.6px;
+            letter-spacing: 1.5px;
 
             &:after {
               padding-right: 8px;
@@ -118,6 +137,10 @@
         }
       }
 
+      .he {
+        font: 60px Alef;
+      }
+
       .books-by-letter {
         text-align: left;
         float: left;
@@ -126,6 +149,11 @@
         font-weight: bold;
         line-height: 2.41;
         letter-spacing: 1.2px;
+        max-width: 572px;
+
+        a {
+          color: $darkgray;
+        }
       }
     }
 
