--- a/jekyll/app/_scss/_books.scss
+++ b/jekyll/app/_scss/_books.scss
@@ -1,6 +1,7 @@
 .page-books,
 .page-digital-books,
-.page-people {
+.page-people,
+.page-places {
 
   .bread-crumbs {
     display: none;
@@ -108,7 +109,8 @@
       }
     }
 
-    .books-list {
+    .books-list,
+    .terms-list {
       max-width: 723px;
       margin: 0 auto;
 
@@ -143,7 +145,8 @@
         font: 60px Alef;
       }
 
-      .books-by-letter {
+      .books-by-letter,
+      .terms-by-letter {
         text-align: left;
         float: left;
         margin-left: 34px;
