WIP: Add term page.

--- a/jekyll/app/_scss/_books.scss
+++ b/jekyll/app/_scss/_books.scss
@@ -1,7 +1,8 @@
 .page-books,
 .page-digital-books,
 .page-people,
-.page-places {
+.page-places,
+.page-taxonomy-term {
 
   .bread-crumbs {
     display: none;
