WIP: Adding css for IE

--- a/jekyll/app/_layouts/default.html
+++ b/jekyll/app/_layouts/default.html
@@ -11,6 +11,10 @@
   <link rel="stylesheet" href="css/main.css">
   <!-- endbuild -->
 
+  <!--[if lte IE 10]>
+  <link rel="stylesheet" href="ie-lte-10.css" />
+  <![endif]-->
+
 </head>
 <body class="{{ page.body_class }}">
 
