--- a/jekyll/app/_layouts/default.html
+++ b/jekyll/app/_layouts/default.html
@@ -11,9 +11,11 @@
   <link rel="stylesheet" href="css/main.css">
   <!-- endbuild -->
 
-  <!--[if lte IE 10]>
-  <link rel="stylesheet" href="ie-lte-10.css" />
+  <!-- build:css({app,.tmp}) css/ie.css -->
+  <!--[if lte IE 9]>
+  <link rel="stylesheet" href="css/ie.css" />
   <![endif]-->
+  <!-- endbuild -->
 
 </head>
 <body class="{{ page.body_class }}">
