--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -77,6 +77,10 @@ a, a:hover, a:visited {
         &.last:after {
           content: '';
         }
+
+        a {
+          font-weight: normal;
+        }
       }
     }
 
