Fix color border line at book page.

--- a/jekyll/app/_scss/_book.scss
+++ b/jekyll/app/_scss/_book.scss
@@ -164,7 +164,7 @@
 
         .fields-group {
 
-          border-top: 1px solid $darkgray;
+          border-top: 1px solid #eae9e7;
           clear: both;
           padding: 6px 18px 2px;
           margin-top: 56px;
