--- a/jekyll/app/_scss/ie.scss
+++ b/jekyll/app/_scss/ie.scss
@@ -1,25 +1,25 @@
 body {
   .page-books .wrapper .books-list .letter-wrapper {
     clear: both/9;
-    margin-bottom: 48px/9;
+    margin-bottom: 48px;
   }
   .page-books .wrapper footer {
-    margin-top: 114px/9;
+    margin-top: 114px;
   }
 
   .page-single-book .wrapper .main-content .top-details {
-    padding: 0 21px 48px/9;
-    border-bottom: 2px solid #615f59/9;
-    margin-bottom: 29px/9;
+    padding: 0 21px 48px;
+    border-bottom: 2px solid #615f59;
+    margin-bottom: 29px;
   }
 
   .page-single-book .wrapper .main-content .fields-group {
-    clear: both/9;
-    border-top: 1px solid #615f59/9;
-    padding: 7px 15px 2px/9;
-    margin-top: 56px/9;
+    clear: both;
+    border-top: 1px solid #615f59;
+    padding: 7px 15px 2px;
+    margin-top: 56px;
   }
   .page-single-book .wrapper footer {
-    margin-top: 16px/9;
+    margin-top: 16px;
   }
 }
