--- a/jekyll/app/_layouts/default.html
+++ b/jekyll/app/_layouts/default.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="css/main.css">
   <!-- endbuild -->
 
+  <script type="text/javascript" src="js/main.js"></script>
+
 </head>
 <body class="{{ page.body_class }}">
 
