--- a/jekyll/app/_layouts/default.html
+++ b/jekyll/app/_layouts/default.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="css/main.css">
   <!-- endbuild -->
 
+  <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
-
 </head>
 <body class="{{ page.body_class }}">
 
