--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -62,6 +62,28 @@ a, a:hover, a:visited {
 
   header {
 
+    .bread-crumbs {
+      margin-right: 4px;
+      margin-top: 10px;
+
+      li {
+        display: inline;
+        font-weight: bold;
+
+        &:after {
+          content: ' >';
+        }
+
+        &.last:after {
+          content: '';
+        }
+
+        a {
+          font-weight: normal;
+        }
+      }
+    }
+
     a {
       color: $darkgray;
       display: inline-block;
