Displaying page element edit link

--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -388,3 +388,9 @@ a, a:hover, a:visited {
     }
   }
 }
+
+.view-id-page_element .views-field-edit-node a {
+  position: absolute;
+  right: -20px;
+  top: -20px;
+}
