--- a/jekyll/app/_layouts/default.html
+++ b/jekyll/app/_layouts/default.html
@@ -7,13 +7,17 @@
   <meta name="viewport" content="width=device-width">
 
   <!-- build:css({app,.tmp}) css/main.css -->
-  <!-- Custom CSS -->
   <link rel="stylesheet" href="css/main.css">
   <!-- endbuild -->
 
-  <!-- build:css({app,.tmp}) css/ie.css -->
+  <!-- build:css({app,.tmp}) css/ie_gte_10.css -->
+  <!-- Css for IE >= 10 -->
+  <link rel="stylesheet" href="css/ie_gte_10.css" />
+  <!-- endbuild -->
+
+  <!-- build:css({app,.tmp}) css/ie_lte_9.css -->
   <!--[if lte IE 9]>
-  <link rel="stylesheet" href="css/ie.css" />
+  <link rel="stylesheet" href="css/ie_lte_9.css" />
   <![endif]-->
   <!-- endbuild -->
 
