--- a/jekyll/app/_scss/_book.scss
+++ b/jekyll/app/_scss/_book.scss
@@ -167,11 +167,6 @@
             margin-top: -3px;
             font-size: 14px;
 
-            .tab-sub-title {
-              margin-top: 40px;
-              border-bottom: 1px solid $darkgray;
-            }
-
             .field-item {
               display: inline;
 
@@ -186,6 +181,14 @@
           }
         }
       }
+      .tab-sub-title {
+        margin-top: 40px;
+        border-bottom: 1px solid $darkgray;
+      }
+      .type-of-book {
+        display: none;
+      }
+
     }
 
     footer {
