--- a/jekyll/app/_scss/ie.scss
+++ b/jekyll/app/_scss/ie.scss
@@ -1,6 +1,6 @@
 body {
   .page-books .wrapper .books-list .letter-wrapper {
-    clear: both/9;
+    clear: both;
     margin-bottom: 48px;
   }
   .page-books .wrapper footer {
@@ -21,5 +21,18 @@ body {
   }
   .page-single-book .wrapper footer {
     margin-top: 16px;
+  }
+
+  .wrapper footer .icons-nav {
+    padding-top: 5px;
+    padding-bottom: 33px;
+  }
+
+  .wrapper footer .icons-nav {
+    margin-top: 15px;
+  }
+
+  .wrapper footer .icons-nav li {
+    background: url("../images/bullet.png") no-repeat right 10px top 27px;
   }
 }
