--- a/jekyll/app/_scss/ie_gte_10.scss
+++ b/jekyll/app/_scss/ie_gte_10.scss
@@ -1,4 +1,6 @@
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+/* home page */
+
   body.front {
 
     .page-books .wrapper .books-list .letter-wrapper {
@@ -50,4 +52,28 @@
       margin-bottom: 34px;
     }
   }
+
+  /* book page */
+
+  body.node-type-book .wrapper {
+
+    .main-content {
+      #top-details {
+        padding: 0 32px 51px;
+        border-bottom: 2px solid #615f59;
+        margin-bottom: 41px;
+      }
+
+      #top-details .field {
+        line-height: 2.30;
+        letter-spacing: 0.4px;
+      }
+    }
+
+    footer {
+      margin-top: 33px;
+    }
+  }
 }
+
+
